--- a/thin-ui.css
+++ b/thin-ui.css
@@ -1,7 +1,7 @@
 /**
  * Thin UI CSS Framework
  *
- * @version 2.0.0
+ * @version 2.0.1
  */
 :root {
     --thin-ui-primary: #323CB9;
@@ -650,4 +650,76 @@ label.thin-ui-popover button:focus + .thin-ui-popover-body {
         margin-right: 0;
         margin-top: 0.2rem;
     }
+}
+
+
+
+/**
+ * Thin UI Modal Dialog
+ */
+.thin-ui-modal-dialog * {
+    box-sizing: border-box;
+}
+
+.thin-ui-modal-dialog {
+    position: fixed;
+    z-index: 1;
+    left: 0;
+    top: 0;
+    width: 100%;
+    height: 100%;
+    background-color: rgba(0, 0, 0, 0.4);
+    border: none;
+    display: flex;
+    align-items: center;
+    justify-content: center;
+}
+
+.thin-ui-modal-window {
+    background-color: #fff;
+    min-width: 480px;
+    border: 4px solid black;
+    border-top-width: 0;
+    box-shadow: 0 0 0 4px rgb(0 0 0 / 15%), 0 0 16px rgb(0 0 0 / 25%);
+    display: flex;
+    flex-flow: column wrap;
+}
+
+.thin-ui-modal-title {
+    display: flex;
+    align-items: center;
+    justify-content: center;
+    font-weight: 500;
+    background-color: #000000;
+    width: 100%;
+    color: #fff;
+    padding: 4px 16px;
+}
+
+.thin-ui-modal-close {
+    margin-left: auto;
+    background: none;
+    border: 0 none;
+    font-size: 26px;
+    font-weight: inherit;
+    font-family: inherit;
+    color: #fff;
+}
+
+.thin-ui-modal-text {
+    margin: 48px 0;
+    padding: 0 16px;
+}
+
+.thin-ui-modal-button-group {
+    margin: auto 0 16px 0;
+    padding: 0 16px;
+    display: flex;
+    justify-content: space-between;
+    flex-direction: row;
+}
+
+.thin-ui-modal-button-group button {
+    font-weight: inherit;
+    font-family: inherit;
 }
