--- a/thin-ui.css
+++ b/thin-ui.css
@@ -4,12 +4,12 @@
  * @version 2.1.1
  */
 :root {
-    --thin-ui-primary: #323CB9;
-    --thin-ui-secondary: #A3A9F5;
-    --thin-ui-neutral: #E4E9EF;
+    --thin-ui-primary: #323cb9;
+    --thin-ui-secondary: #a3a9f5;
+    --thin-ui-neutral: #e4e9ef;
 
-    --thin-ui-action: #4FAE33;
-    --thin-ui-warning: #FF7F00;
+    --thin-ui-action: #4fae33;
+    --thin-ui-warning: #ff7f00;
 
     --thin-ui-details: #dbf6fd;
     --thin-ui-details-outline: #bbe1eb;
@@ -285,18 +285,13 @@ html {
     }
 }
 
-
-
-
 .thin-ui-svg {
     display: inline-block;
     font-size: inherit;
     height: 1em;
     overflow: visible;
-    vertical-align: -.125em;
+    vertical-align: -0.125em;
 }
-
-
 
 /**
  * Form elements reset
@@ -364,8 +359,6 @@ html {
 .thin-ui-color-well {
     accent-color: var(--thin-ui-primary);
 }
-
-
 
 /*
  * Buttons
@@ -437,13 +430,9 @@ html {
     border-radius: 64px;
 }
 
-
-
 .thin-ui-warning {
     color: var(--thin-ui-warning);
 }
-
-
 
 /**
  * Thin UI Checkblock
@@ -481,8 +470,6 @@ html {
     background-color: var(--thin-ui-primary);
     color: #ffffff;
 }
-
-
 
 /**
  * Thin UI Switch
@@ -531,8 +518,6 @@ html {
     left: 12px;
 }
 
-
-
 /**
  * Thin UI single-element toggle switch
  */
@@ -560,7 +545,7 @@ input[type="checkbox"].thin-ui-toggle:focus {
 }
 
 input[type="checkbox"].thin-ui-toggle:after {
-    content: '';
+    content: "";
     font-size: 8px;
     font-weight: 400;
     line-height: 18px;
@@ -575,7 +560,7 @@ input[type="checkbox"].thin-ui-toggle:after {
 }
 
 input[type="checkbox"].thin-ui-toggle:before {
-    content: '';
+    content: "";
     width: 14px;
     height: 14px;
     display: block;
@@ -598,34 +583,27 @@ input[type="checkbox"].thin-ui-toggle:before,
 input[type="checkbox"].thin-ui-toggle:after,
 input[type="checkbox"].thin-ui-toggle:checked:before,
 input[type="checkbox"].thin-ui-toggle:checked:after {
-    transition: ease .15s;
+    transition: ease 0.15s;
 }
 
 input[type="checkbox"].thin-ui-toggle:checked:after {
     background-color: var(--thin-ui-primary);
 }
 
-
-
 .col--inner {
     background-color: #ffffff;
     margin: 4px;
     padding: 16px;
-    box-shadow: 0 1px 2px rgba(0, 0, 0, 0.025),
-                0 2px 4px rgba(0, 0, 0, 0.025),
-                0 4px 8px rgba(0, 0, 0, 0.025),
-                0 8px 16px rgba(0, 0, 0, 0.025);
+    box-shadow: 0 1px 2px rgba(0, 0, 0, 0.025), 0 2px 4px rgba(0, 0, 0, 0.025),
+        0 4px 8px rgba(0, 0, 0, 0.025), 0 8px 16px rgba(0, 0, 0, 0.025);
 }
 .col--inner-blank {
     box-shadow: none;
 }
 .col--inner-highlight {
-    box-shadow: 0 1px 2px rgba(0, 0, 0, 0.05),
-                0 2px 4px rgba(0, 0, 0, 0.05),
-                0 4px 8px rgba(0, 0, 0, 0.05),
-                0 8px 16px rgba(0, 0, 0, 0.05),
-                0 16px 32px rgba(0, 0, 0, 0.05),
-                0 32px 64px rgba(0, 0, 0, 0.05);
+    box-shadow: 0 1px 2px rgba(0, 0, 0, 0.05), 0 2px 4px rgba(0, 0, 0, 0.05),
+        0 4px 8px rgba(0, 0, 0, 0.05), 0 8px 16px rgba(0, 0, 0, 0.05),
+        0 16px 32px rgba(0, 0, 0, 0.05), 0 32px 64px rgba(0, 0, 0, 0.05);
 }
 .col--inner-title {
     margin-top: 0;
@@ -635,10 +613,6 @@ input[type="checkbox"].thin-ui-toggle:checked:after {
     font-weight: 500;
     font-size: 16px;
 }
-
-
-
-
 
 /**
  * Thin UI Pills
@@ -673,7 +647,8 @@ input[type="checkbox"].thin-ui-toggle:checked:after {
 .thin-ui-pill-value {
     min-width: 0px;
     white-space: nowrap;
-    font-family: ui-monospace, SFMono-Regular, "SF Mono", Menlo, Consolas, "Liberation Mono", monospace;
+    font-family: ui-monospace, SFMono-Regular, "SF Mono", Menlo, Consolas,
+        "Liberation Mono", monospace;
     max-width: 100%;
     padding: 4px 8px;
     background: rgb(251, 251, 252);
@@ -688,8 +663,6 @@ input[type="checkbox"].thin-ui-toggle:checked:after {
     display: inline-block;
 }
 
-
-
 .thin-ui-badge {
     display: inline-block;
     font-size: 10px;
@@ -700,8 +673,6 @@ input[type="checkbox"].thin-ui-toggle:checked:after {
     padding: 4px;
     border-radius: 2px;
 }
-
-
 
 .thin-ui-notification-bar {
     position: fixed;
@@ -716,8 +687,6 @@ input[type="checkbox"].thin-ui-toggle:checked:after {
     transition: all 0.5s ease-out;
     transform: translateY(-72px);
 }
-
-
 
 /**
  * Thin UI Popovers
@@ -759,8 +728,6 @@ input[type="checkbox"].thin-ui-toggle:checked:after {
     display: block;
 }
 
-
-
 /**
  * Thin UI Spacers
  */
@@ -768,35 +735,26 @@ input[type="checkbox"].thin-ui-toggle:checked:after {
     margin: 24px 0;
 }
 
-
-
 /**
  * Thin UI Tabs
  */
 .thin-ui-tabstrip {
     display: flex;
     flex-wrap: wrap;
+    gap: 0 0.5em;
 }
 .thin-ui-tabstrip label {
-	order: 1;
-	display: block;
-	margin-right: 2px;
-
-    background-color: var(--thin-ui-neutral);
+    order: 1;
+    display: block;
     color: #000000;
-
     cursor: pointer;
     white-space: nowrap;
     color: #000000;
-    padding: 8px 14px;
-    font-size: 13px;
+    padding: 1em 0.334em;
+    font-size: 14px;
+    font-weight: 500;
     border-radius: 2px 2px 0 0;
-    box-shadow: inset 0 -2px 0 rgba(0, 0, 0, 0.15);
-    transition: background-color 0.05s ease-out;
-}
-.thin-ui-tabstrip label:hover {
-    background-color: var(--thin-ui-secondary);
-    color: #ffffff;
+    box-shadow: inset 0 -2px 0 oklch(92.8% 0.006 264.531);
 }
 
 .thin-ui-tabstrip .thin-ui-tab {
@@ -804,20 +762,22 @@ input[type="checkbox"].thin-ui-toggle:checked:after {
     flex-grow: 1;
     width: 100%;
     display: none;
-    padding: 1em;
+    padding: 1em 0;
 
     border-radius: 0 0 2px 2px;
-    box-shadow: 0 1px 2px rgba(0, 0, 0, 0.025), 0 2px 4px rgba(0, 0, 0, 0.025), 0 4px 8px rgba(0, 0, 0, 0.025), 0 8px 16px rgba(0, 0, 0, 0.025);
+    box-shadow: 0 -2px 0 oklch(92.8% 0.006 264.531);
 }
 .thin-ui-tabstrip input[type="radio"] {
-	display: none;
+    display: none;
 }
+.thin-ui-tabstrip label:hover,
 .thin-ui-tabstrip input[type="radio"]:checked + label {
-    background-color: var(--thin-ui-primary);
-    color: #ffffff;
+    color: var(--thin-ui-primary);
+    box-shadow: inset 0 -2px 0 var(--thin-ui-primary);
+    position: relative;
 }
 .thin-ui-tabstrip input[type="radio"]:checked + label + .thin-ui-tab {
-	display: block;
+    display: block;
 }
 
 @media (max-width: 768px) {
@@ -831,8 +791,6 @@ input[type="checkbox"].thin-ui-toggle:checked:after {
         margin-top: 0.2rem;
     }
 }
-
-
 
 /**
  * Thin UI Modal Dialog
@@ -905,8 +863,6 @@ input[type="checkbox"].thin-ui-toggle:checked:after {
     font-family: inherit;
 }
 
-
-
 /**
  * Details
  */
@@ -942,7 +898,7 @@ details.thin-ui-details summary::before {
     height: 32px;
     display: block;
     margin-right: 1em;
-    content: '';
+    content: "";
     background-position: center center;
     background-repeat: no-repeat;
     background-image: url("data:image/svg+xml,%3Csvg xmlns='http://www.w3.org/2000/svg' width='30' height='31' viewBox='0 0 30 31'%3E%3Cg id='Group_1' data-name='Group 1' transform='translate(-11 -292)'%3E%3Cellipse id='Ellipse_1' data-name='Ellipse 1' cx='15' cy='15.5' rx='15' ry='15.5' transform='translate(11 292)' fill='%2369b9ce'/%3E%3Cpath id='Path_3' data-name='Path 3' d='M4.524-17.368a4.507,4.507,0,0,0-1.56.312.278.278,0,0,0-.13.286V-14.9c0,2.184.416,8.294.468,9.022a.172.172,0,0,0,.182.156h2.08c.156,0,.182-.078.182-.156.078-.78.52-6.916.52-9.1v-1.872a.326.326,0,0,0-.156-.286A5.112,5.112,0,0,0,4.524-17.368Zm0,17.576A1.7,1.7,0,0,0,6.4-1.534,1.741,1.741,0,0,0,4.524-3.328,1.77,1.77,0,0,0,2.652-1.534,1.7,1.7,0,0,0,4.524.208Z' transform='translate(22 316)' fill='%23fff'/%3E%3C/g%3E%3C/svg%3E%0A");
@@ -952,7 +908,7 @@ details.thin-ui-details summary::after {
     height: 100%;
     border-radius: 2px;
     display: block;
-    content: '';
+    content: "";
     background-position: center center;
     background-repeat: no-repeat;
     position: absolute;
